--- a/Assignment2_CH23S020.ipynb
+++ b/Assignment2_CH23S020.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOd1p/hT1Beg6DXmM62mWhu",
+      "authorship_tag": "ABX9TyP738Gt7hbPRrqYiiSHrjcQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,6 +60,52 @@
         "# Unmount Google Drive (optional)\n",
         "#drive.unmount('/content/drive')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0Rrj0Z0gH4E2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "import torchvision.transforms as transforms\n",
+        "import torchvision.datasets as datasets\n",
+        "from torch.utils.data import DataLoader, random_split\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "ag1BhlgFH4H6"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class CNN_i_Naturalist(nn.Module):\n",
+        "    def __init__(self, num_classes, num_filters, filter_size, activation, filter_org, use_batchnorm, use_dropout):\n",
+        "        super(CNN_i_Naturalist, self).__init__()\n",
+        "        self.num_classes = num_classes\n",
+        "        self.num_filters = num_filters\n",
+        "        self.filter_size = filter_size\n",
+        "        self.activation = activation\n",
+        "        self.filter_org = filter_org\n",
+        "        self.use_batchnorm = use_batchnorm\n",
+        "        self.use_dropout = use_dropout"
+      ],
+      "metadata": {
+        "id": "TL6pcSdUH-RN"
+      },
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
