--- a/Assignment2_CH23S020.ipynb
+++ b/Assignment2_CH23S020.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP738Gt7hbPRrqYiiSHrjcQ",
+      "authorship_tag": "ABX9TyNocPW/7sTyIWIArEOSv22P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,6 +105,36 @@
         "id": "TL6pcSdUH-RN"
       },
       "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "layers = []\n",
+        "in_channels = 3\n",
+        "num_classes = 10\n",
+        "num_filters = [32, 64, 128, 256, 512]\n",
+        " for i in range(len(num_filters)):\n",
+        "            layers.append(nn.Conv2d(in_channels, num_filters[i], filter_size[i]))\n",
+        "            if use_batchnorm:\n",
+        "                layers.append(nn.BatchNorm2d(num_filters[i]))\n",
+        "            if activation == 'ReLU':\n",
+        "                layers.append(nn.ReLU())\n",
+        "            elif activation == 'GELU':\n",
+        "                layers.append(nn.GELU())\n",
+        "            elif activation == 'SiLU':\n",
+        "                layers.append(nn.SiLU())\n",
+        "            elif activation == 'Mish':\n",
+        "                layers.append(nn.Mish())\n",
+        "            layers.append(nn.MaxPool2d(2, 2))\n",
+        "            if use_dropout:\n",
+        "                layers.append(nn.Dropout(0.2))\n",
+        "            in_channels = num_filters[i]"
+      ],
+      "metadata": {
+        "id": "kbvp1IjhIoSS"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
