--- a/Assignment2_CH23S020.ipynb
+++ b/Assignment2_CH23S020.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNocPW/7sTyIWIArEOSv22P",
+      "authorship_tag": "ABX9TyMXbBCfPurAl+lgxMH+JwF9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "ag1BhlgFH4H6"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,12 +99,50 @@
         "        self.activation = activation\n",
         "        self.filter_org = filter_org\n",
         "        self.use_batchnorm = use_batchnorm\n",
-        "        self.use_dropout = use_dropout"
+        "        self.use_dropout = use_dropout\n",
+        "\n",
+        "        # Convolution layers\n",
+        "        layers = []\n",
+        "        in_channels = 3 # Assuming RGB images\n",
+        "        prev_output_size = 224  # Initial image size, adjust as necessary\n",
+        "        for i in range(len(num_filters)):\n",
+        "            layers.append(nn.Conv2d(in_channels, num_filters[i], filter_size[i]))\n",
+        "            if use_batchnorm:\n",
+        "                layers.append(nn.BatchNorm2d(num_filters[i]))\n",
+        "            if activation == 'ReLU':\n",
+        "                layers.append(nn.ReLU())\n",
+        "            elif activation == 'GELU':\n",
+        "                layers.append(nn.GELU())\n",
+        "            elif activation == 'SiLU':\n",
+        "                layers.append(nn.SiLU())\n",
+        "            elif activation == 'Mish':\n",
+        "                layers.append(nn.Mish())\n",
+        "            layers.append(nn.MaxPool2d(2, 2))\n",
+        "            if use_dropout:\n",
+        "                layers.append(nn.Dropout(0.2))\n",
+        "            in_channels = num_filters[i]\n",
+        "            # Calculate the output size of this layer\n",
+        "            prev_output_size = (prev_output_size - filter_size[i][0] + 1) // 2\n",
+        "        self.conv_layers = nn.Sequential(*layers)\n",
+        "\n",
+        "        # Calculate the input size to the fully connected layers\n",
+        "        self.fc_input_size = in_channels * prev_output_size * prev_output_size\n",
+        "\n",
+        "        # Dense layers\n",
+        "        self.fc = nn.Linear(self.fc_input_size, 128)\n",
+        "        self.fc2 = nn.Linear(128, num_classes)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.conv_layers(x)\n",
+        "        x = x.view(x.size(0), -1)\n",
+        "        x = self.fc(x)\n",
+        "        x = self.fc2(x)\n",
+        "        return x"
       ],
       "metadata": {
         "id": "TL6pcSdUH-RN"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
