--- a/Assignment2_CH23S020.ipynb
+++ b/Assignment2_CH23S020.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXbBCfPurAl+lgxMH+JwF9",
+      "authorship_tag": "ABX9TyPnTs5cNhmI2mu29w71LhSN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -137,7 +137,17 @@
         "        x = x.view(x.size(0), -1)\n",
         "        x = self.fc(x)\n",
         "        x = self.fc2(x)\n",
-        "        return x"
+        "        return x\n",
+        "\n",
+        "# Hyperparameters\n",
+        "num_classes = 10\n",
+        "num_filters = [32, 64, 128, 256, 512]\n",
+        "filter_size = [(3, 3), (3, 3), (3, 3), (3, 3), (3, 3)]\n",
+        "activation = 'ReLU'  #activation function\n",
+        "filter_org = 'double'  # 'same', 'double', 'halve'\n",
+        "use_batchnorm = True  # Set to True or False\n",
+        "use_dropout = True  # Set to True or False\n",
+        "num_epochs = 2"
       ],
       "metadata": {
         "id": "TL6pcSdUH-RN"
